MochaTest prints results